# pytest-cratedb-reporter

./: .gitignore  LICENSE  README.md  cratedb-deployment.yaml  pyproject.toml  requirements.txt
example/: test_example.py
pytest_cratedb_reporter/: plugin.py
